corrected content alignment

--- a/css/list.css
+++ b/css/list.css
@@ -82,7 +82,6 @@
 
 .list__content {
   display: flex;
-  justify-content: center;
   word-break: break-word;
   font-style: normal;
 }
